check html semantic tags

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -46,7 +46,7 @@
         <div class="flex flex-col md:flex-row gap-y-8 relative">
             <img src="/images/backg-1.png" alt="square" class="hidden lg:block absolute bottom-12 -left-20">
             <img src="/images/backg-1.png" alt="square" class="hidden lg:block absolute top-12 -right-20 -z-10">
-            <article class="bg-tertiary-2 my-auto mx-auto flex flex-col py-12">
+            <div class="bg-tertiary-2 my-auto mx-auto flex flex-col py-12">
                 <p class="text-sm mb-1 text-center">Houston, USA</p>
                 <h2 class="font-bold text-2xl text-center">Our Head Office</h2>
                 <table class="text-left border-spacing-x-8 border-spacing-y-4 border-separate mx-auto lg:ml-32 lg:mr-20">
@@ -68,8 +68,8 @@
                     </tbody>
                 </table>
                 <button class="text-white bg-secondary leading-7 border-2 border-secondary px-10 py-3.5 mx-auto">Get Directions</button>
-            </article>
-            <article class="bg-white p-6 mx-auto">
+            </div>
+            <div class="bg-white p-6 mx-auto">
                 <h2 class="font-bold text-2xl text-center mt-2">Send a Message</h2>
                 <img src="/images/vector-2.png" alt="vector" class="mx-auto mt-2 mb-4">
                 <form action="" class="grid grid-cols-2 gap-4">
@@ -359,7 +359,7 @@
                     <input type="submit" value="Submit">
                     </button>
                 </form>
-            </article>
+            </div>
         </div>
     </main>
     <footer class="mt-10 md:mt-15 container mx-auto  px-10 mb-4">
