--- a/src/career.html
+++ b/src/career.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/dist/style.css">
 </head>
 <body class="bg-primary">
-    <header class="flex flex-row justify-between py-5 mb-5 px-10 sm:px-0 container mx-auto items-center">
+    <header class="flex flex-row justify-between py-5 mb-5 px-10 container mx-auto items-center">
         <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
@@ -38,7 +38,7 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-15 relative">
+    <main class="container mx-auto px-10 relative">
         <img src="/images/group-26.png" alt="point" class="absolute bottom-5 -z-10 -left-28 hidden lg:block">
         <img src="/images/group-25.png" alt="hex" class="absolute bottom-0 -right-20 hidden lg:block -z-10"> 
         <p class="text-sm text-center mb-1">Working With Us</p>
@@ -47,7 +47,7 @@
         <img src="/images/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
         <p class="text-center">Discover what it’s like to be part of the Scala team.</p>
         <figure class="container mx-auto my-6">
-            <img src="/images/pexels-andrea-piacquadio-3760069 1.png" alt="careers" class="w-full">
+            <img src="/images/pexels-andrea-piacquadio-3760069.png" alt="careers" class="w-full">
         </figure>
         <h2 class="text-2xl font-bold text-center">Introduction</h2>
         <p class="my-4 text-center">At Tricon, we credit our success and rapid growth to our greatest asset: <span class="text-secondary"> Our People.</span></p>
@@ -61,7 +61,7 @@
                 <button class="py-3.5 px-10 mx-auto text-white border-secondary border-2 bg-secondary border-solid col-span-2 md:my-8 my-4">View Positions</button>
         </div>
     </main>
-    <div class="bg-tertiary-2">
+    <aside class="bg-tertiary-2">
         <div class=" mx-auto flex flex-col md:gap-y-4 gap-y-8 pt-24 pb-14 px-10">
             <div class="text-center leading-7 mx-auto relative">
                 <img src="/images/img1.png" alt="vector" class="absolute -left-24 -top-12 hidden lg:block">
@@ -81,7 +81,7 @@
                 <img src="/images/star-212.png" alt="star">
             </div>
         </div>
-    </div>
+    </aside>
     <section class="container mx-auto px-10 mt-10">
         <h2 class="text-2xl">Employee <span class="text-secondary"> Stories </span></h2>
         <img src="/images/vvv.png" alt="vector" class="mt-2">
