--- a/src/our-values.html
+++ b/src/our-values.html
@@ -64,7 +64,7 @@
             <p class="max-w-3xl mx-auto my-6">We expect our employees and business partners to live these values by conducting their work ethically and encourage anyone to report concerns about our business conduct to the <span class="text-secondary"> Scala Listens Helpline. </span></p>
            </article>
         </main>
-        <section class=" bg-tertiary-2">
+        <aside class=" bg-tertiary-2">
             <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8 relative">
                 <figure class="col-span-3 md:col-span-1">
                     <img src="/images/pexel.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
@@ -76,7 +76,7 @@
                 <p class="leading-7 mt-4 mb-9">Scala employs more than 400 employees globally with diverse cultures and backgrounds. As a global supplier and purchaser of products worldwide, Scala operates across a range of cultures and international markets and is committed to working well with all the communities with which we conduct business.</p>
                 </div>
             </div>
-        </section>
+        </aside>
     <footer class="mt-12 md:mt-0 container mx-auto  px-10  mb-4">
         <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
