make correction in career page

--- a/src/career.html
+++ b/src/career.html
@@ -62,7 +62,7 @@
         </div>
     </main>
     <aside class="bg-tertiary-2">
-        <div class=" mx-auto flex flex-col md:gap-y-4 gap-y-8 pt-24 pb-14 px-10">
+        <div class=" container mx-auto flex flex-col md:gap-y-4 gap-y-8 pt-24 pb-14 px-10">
             <div class="text-center leading-7 mx-auto relative">
                 <img src="/images/img1.png" alt="vector" class="absolute -left-24 -top-12 hidden lg:block">
                 <img src="/images/img2.png" alt="vector" class="absolute -right-24 -bottom-12 hidden lg:block ">
