make correction in home page

--- a/src/home.html
+++ b/src/home.html
@@ -38,7 +38,7 @@
                 </nav>
             </div>
         </header>
-    <main class="container mx-auto flex flex-col">
+    <main class="container mx-auto flex flex-col px-10">
         <div class="grid xl:grid-cols-2 xl:mb-24 mb-2 gap-y-8 ">
             <article class="my-auto xl xl:text-left text-center w-5/6 xl:mr-auto mx-auto xl:ml-0 gap-y-8">
                 <h1 class="text-5xl leading-tight font-extrabold">Adding Value Into the Petro Chemical Chain</h1>
@@ -51,10 +51,14 @@
             </article>
             <figure class="w-5/6 mx-auto p-16 xl:ml-0  xl:p-0">
                <div class="relative"><img src="/images/joshua-sun-5OIaZyOiN7E-unsplash.png" class="inline text-center w-full" alt="img">
-                    <div class="absolute top-10 -left-16"><img src="/images/chemicals.png" alt="icon" class=" bg-star1 bg-cover py-10 px-11 "> </div>
-                    <div class="absolute -bottom-16 left-16"><img src="/images/sustainable.png" alt="icon" class=" bg-star1 bg-cover p-10 "> </div>
-                    <div class="absolute right-10 -top-16"><img src="/images/raw-materials.png" alt="icon" class=" bg-star1 bg-cover p-10 "> </div>
-                    <div class="absolute bottom-24 -right-20"><img src="/images/bottle.png" alt="icon" class=" bg-star1 bg-cover p-10 "></div>
+                <div class="absolute -top-[10%] right-[6%] w-1/4 mx-auto"><img src="/images/star-4.png" alt="icon" class=""></div>
+                <div class="absolute -top-[3%] right-[14.5%] w-1/12 "><img src="/images/raw-materials.png" alt="icon" class=""></div>
+                <div class="absolute top-[6%] -left-[12.5%] w-1/4"><img src="/images/star-4.png" alt="icon" class=""></div>
+                <div class="absolute top-[13%] -left-[4%] w-1/12"><img src="/images/chemicals.png" alt="icon" class=""></div>
+                <div class="absolute -bottom-[12%] left-[6%] w-1/4"><img src="/images/star-4.png" alt="icon" class=""></div>
+                <div class="absolute -bottom-[3.5%] left-[14.5%] w-1/12"><img src="/images/sustainable.png" alt="icon" class=""></div>
+                <div class="absolute bottom-[12%] -right-[18%] w-1/4"><img src="/images/star-4.png" alt="icon" class=""></div>
+                <div class="absolute bottom-[20.5%] -right-[9.5%] w-1/12"><img src="/images/bottle.png" alt="icon" class=""></div>
                     <div class="absolute hidden xl:block -right-32 top-16 -z-10 "><img src="/images/group-1.png" alt="group-1"></div>
                 </div>
             </figure>
