make correction in careers page

--- a/src/career.html
+++ b/src/career.html
@@ -110,7 +110,7 @@
             </div>
         </div>
     </section>
-    <section class="mx-auto container xl:mt-24 mt-20 grid xl:grid-cols-4 grid-cols-3 gap-x-32 gap-y-8">
+    <section class="mx-auto container xl:mt-24 mt-20 grid xl:grid-cols-4 grid-cols-3 gap-x-32 gap-y-8 px-10">
         <div class="xl:col-span-1 col-span-3 order-last xl:order-first text-center xl:text-left">
             <p class="text-sm mb-1">Explore Scala's Global Presence</p>
             <img src="/images/vector-2.png" alt="vektor" class="inline">
