--- a/src/home.html
+++ b/src/home.html
@@ -39,38 +39,34 @@
             </div>
         </header>
     <main class="container mx-auto flex flex-col px-10">
-        <div class="grid xl:grid-cols-2 xl:mb-24 mb-2 gap-y-8 ">
-            <article class="my-auto xl xl:text-left text-center w-5/6 xl:mr-auto mx-auto xl:ml-0 gap-y-8">
+        <div class="grid xl:grid-cols-2 xl:mb-24 mb-2 gap-y-24 ">
+            <div class="my-auto xl xl:text-left text-center w-5/6 xl:mr-auto mx-auto xl:ml-0 gap-y-8">
                 <h1 class="text-5xl leading-tight font-extrabold">Adding Value Into the Petro Chemical Chain</h1>
                 <img src="/images/veektör.png" alt="vector" class="mb-2 mt-6 inline">
                 <p class="my-6">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs od the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
-                <div class="flex flex-row gap-x-4">
-                <button class="text-white bg-secondary border-2 xl:basis-1/3 px-10 py-3 basis-1/2">Read More</button>
-                <button class="text-secondary border-2 border-secondary  xl:basis-1/3 px-10 py-3 basis-1/2">Contact Us</button>
+                <div class="flex sm:flex-row gap-x-4 flex-col gap-y-4">
+                <button class="text-white bg-secondary border-2 xl:basis-1/3 px-10 py-3 basis-1/2 ">Read More</button>
+                <button class="text-secondary border-2 border-secondary  xl:basis-1/3 px-10 py-3 basis-1/2 ">Contact Us</button>
                 </div>
-            </article>
-            <figure class="w-5/6 mx-auto p-16 xl:ml-0  xl:p-0">
+            </div>
+            <figure class="w-5/6 mx-auto xl:ml-0 ">
                <div class="relative"><img src="/images/joshua-sun-5OIaZyOiN7E-unsplash.png" class="inline text-center w-full" alt="img">
-                <div class="absolute -top-[10%] right-[6%] w-1/4 mx-auto"><img src="/images/star-4.png" alt="icon" class=""></div>
-                <div class="absolute -top-[3%] right-[14.5%] w-1/12 "><img src="/images/raw-materials.png" alt="icon" class=""></div>
-                <div class="absolute top-[6%] -left-[12.5%] w-1/4"><img src="/images/star-4.png" alt="icon" class=""></div>
-                <div class="absolute top-[13%] -left-[4%] w-1/12"><img src="/images/chemicals.png" alt="icon" class=""></div>
-                <div class="absolute -bottom-[12%] left-[6%] w-1/4"><img src="/images/star-4.png" alt="icon" class=""></div>
-                <div class="absolute -bottom-[3.5%] left-[14.5%] w-1/12"><img src="/images/sustainable.png" alt="icon" class=""></div>
-                <div class="absolute bottom-[12%] -right-[18%] w-1/4"><img src="/images/star-4.png" alt="icon" class=""></div>
-                <div class="absolute bottom-[20.5%] -right-[9.5%] w-1/12"><img src="/images/bottle.png" alt="icon" class=""></div>
+                <div class="absolute xl:-top-16 bg-star1 bg-cover lg:-top-14  md:-top-12 md:right-12 p-6 lg:p-8 xl:p-10 -top-10 right-10"><img src="/images/raw-materials.png" alt="icon" class="w-6 h-6 md:w-10 md:h-10 lg:w-auto lg:h-auto"></div>
+                <div class="absolute top-12 bg-star1 bg-cover xl:-left-16 lg:-left-14 md:-left-12 -left-10 p-6 lg:p-8 xl:p-10"><img src="/images/chemicals.png" alt="icon" class="w-6 h-6 md:w-10 md:h-10 lg:w-auto lg:h-auto"></div>
+                <div class="absolute xl:-bottom-16 left-12 bg-star1 bg-cover lg:-bottom-14 md:-bottom-12 p-6 lg:pm-8 xl:p-10 -bottom-10"><img src="/images/sustainable.png" alt="icon" class="w-6 h-6 md:w-10 md:h-10 lg:w-auto lg:h-auto"></div>
+                <div class="absolute xl:bottom-20 xl:-right-20 bg-star1 bg-cover lg:bottom-16 md:-right-16 md:bottom-12 xl:p-10 lg:p-8 p-6 bottom-12 -right-12"><img src="/images/bottle.png" alt="icon" class=" md:w-10 md:h-10 lg:w-auto lg:h-auto w-6 h-6"></div>
                     <div class="absolute hidden xl:block -right-32 top-16 -z-10 "><img src="/images/group-1.png" alt="group-1"></div>
                 </div>
             </figure>
         </div>
-        <div class="grid grid-cols-1 xl:grid-cols-3 gap-y-4 gap-x-3 xl:mb-12 p-8 mb-0">
+        <div class="grid grid-cols-1 xl:grid-cols-3 gap-y-4 gap-x-3 xl:mb-12 p-8 mb-0 mt-12 xl:mt-0">
             <div class="relative">
                 <p class="text-special leading-10 mb-0 xl:mb-16"><span class="text-secondary "> Scala</span> is an industry leader in the global trade and distribution market.</p>
                 <div class="hidden xl:block absolute -left-24">
                     <img src="/images/group-2.png" alt="square">
                 </div>
             </div>
-            <div class="col-span-2 grid xl:grid-cols-2 gap-x-5 xl:gap-y-4 gap-y-8">
+            <div class="col-span-2 grid xl:grid-cols-2 gap-x-5 xl:gap-y-4 gap-y-8 ">
                 <article>
                     <img src="/images/sustainable-2.png" alt="small-icon"  class="p-4 inline bg-sm-star bg-cover">
                     <h3 class="py-2 font-bold">Logistics</h3>
