update product pages

--- a/src/chemicals.html
+++ b/src/chemicals.html
@@ -38,8 +38,8 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto grid grid-cols-2 gap-x-24 md:mb-32 mb-16 gap-y-20 px-10 items-center">
-        <div class="mx-auto col-span-2 md:col-span-1">
+    <main class="container mx-auto grid grid-cols-2 md:mb-32 mb-16 gap-y-20 px-10 items-center">
+        <div class="w-full md:w-5/6 col-span-2 md:col-span-1">
             <p class="text-sm ">What We Do</p>
             <img src="/images/vvv.png" alt="vector" class="mt-1">
             <h1 class="text-5xl leading-tight font-extrabold mt-2">Chemicals</h1>
