--- a/src/sustainable-products.html
+++ b/src/sustainable-products.html
@@ -38,8 +38,8 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto grid grid-cols-2 gap-x-24 md:mb-36 mb-16 gap-y-20 px-10">
-        <div class="mx-auto col-span-2 md:col-span-1">
+    <main class="container mx-auto grid grid-cols-2 md:mb-32 mb-16 gap-y-20 px-10 ">
+        <div class=" col-span-2 md:col-span-1 md:w-5/6 w-full">
             <p class="text-sm ">What We Do</p>
             <img src="/images/vvv.png" alt="vector" class="mt-1">
             <h1 class="text-5xl leading-tight font-extrabold mt-2">Sustainable Products</h1>
