--- a/src/plastics.html
+++ b/src/plastics.html
@@ -51,7 +51,7 @@
             <div class="col-span-2 md:col-span-1">
                 <figure class="relative">
                     <img src="/images/hand_of_young_male_worker_of_large_modern_factory_2021_09_24_03.png" class="w-full" alt="img">
-                    <div class="absolute xl:-top-16 xl:-right-16 bg-star1 bg-cover -top-10 -right-10 md:-top-12 md:-right-12"><img src="/images/bottle.png" alt="icon" class=" p-4 md:p-6 lg:pm-8 xl:p-10"></div>
+                    <div class="absolute xl:-top-16 xl:-right-16 bg-star1 bg-cover -top-10 -right-10 p-6 lg:pm-8 xl:p-10"><img src="/images/bottle.png" alt="icon" class="w-6 h-6 md:w-8 md:h-8 xl:w-auto xl:h-auto "></div>
                     <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/images/group-1.png" alt="icon" class=""></div>
                 </figure>
                 <div class="mt-8">
