--- a/src/sustainable-products.html
+++ b/src/sustainable-products.html
@@ -55,7 +55,7 @@
             <div class="col-span-2 md:col-span-1">
                 <figure class="relative">
                     <img src="/images/product.png" class="w-full" alt="img">
-                    <div class="absolute xl:-top-16 xl:-right-16 bg-star1 bg-cover -top-12 -right-12"><img src="/images/sustainable.png" alt="icon" class="p-6 lg:pm-8 xl:p-10"></div>
+                    <div class="absolute xl:-top-16 xl:-right-16 bg-star1 bg-cover -top-10 -right-10 p-6 lg:pm-8 xl:p-10"><img src="/images/sustainable.png" alt="icon" class="w-6 h-6 md:w-8 md:h-8 xl:w-auto xl:h-auto "></div>
                     <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/images/group-1.png" alt="icon" class=""></div>
                 </figure>
                 <div class="mt-8">
